{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 255,
  "lineage": "304c310c-2bee-46bc-8b2a-d54775c7fb24",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "blogwordpressALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:loadbalancer/app/blogwordpressALB/b83da54cf27da691",
            "arn_suffix": "app/blogwordpressALB/b83da54cf27da691",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "blogwordpressALB-1713581403.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:loadbalancer/app/blogwordpressALB/b83da54cf27da691",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blogwordpressALB",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0560c741437db1ae6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a83167340d4462c"
              },
              {
                "subnet_id": "subnet-05cd81fa2f549ce23"
              },
              {
                "subnet_id": "subnet-0b2f32a5ec8730089"
              }
            ],
            "subnets": [
              "subnet-01a83167340d4462c",
              "subnet-05cd81fa2f549ce23",
              "subnet-0b2f32a5ec8730089"
            ],
            "tags": {
              "Name": "blogwordpressALB"
            },
            "tags_all": {
              "Name": "blogwordpressALB"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.ec2.aws_security_group.load_balancer",
            "module.vpc.aws_subnet.named",
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:listener/app/blogwordpressALB/b83da54cf27da691/c9df3739ac792093",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:targetgroup/blog-asg-tg/94c73ed1afc64817",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:listener/app/blogwordpressALB/b83da54cf27da691/c9df3739ac792093",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:loadbalancer/app/blogwordpressALB/b83da54cf27da691",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.blogwordpressALB",
            "module.ec2.aws_lb_target_group.blog_asg_tg",
            "module.ec2.aws_security_group.load_balancer",
            "module.vpc.aws_subnet.named",
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blog_asg_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:targetgroup/blog-asg-tg/94c73ed1afc64817",
            "arn_suffix": "targetgroup/blog-asg-tg/94c73ed1afc64817",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:targetgroup/blog-asg-tg/94c73ed1afc64817",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:516969219217:loadbalancer/app/blogwordpressALB/b83da54cf27da691"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "blog-asg-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "blog-asg-tg"
            },
            "tags_all": {
              "Name": "blog-asg-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:security-group/sg-0f27c8b32f9308778",
            "description": "Allow NFS access only from web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f27c8b32f9308778",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow web servers to connect to EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a1f9206175a093e"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "516969219217",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.goingtointernet",
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "goingtointernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:security-group/sg-04a1f9206175a093e",
            "description": "Allow outbound HTTP and ICMP to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a1f9206175a093e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTP",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "goingtointernet",
            "name_prefix": "",
            "owner_id": "516969219217",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:security-group/sg-0560c741437db1ae6",
            "description": "Allow inbound HTTP/HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0560c741437db1ae6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg",
            "name_prefix": "",
            "owner_id": "516969219217",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:security-group/sg-05519907a950bd40c",
            "description": "Allow DB access only from web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05519907a950bd40c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow web servers to connect to RDS Instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a1f9206175a093e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "516969219217",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.goingtointernet",
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "blog_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:internet-gateway/igw-0feaa8bb2fc2c5948",
            "id": "igw-0feaa8bb2fc2c5948",
            "owner_id": "516969219217",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "blog-igw",
              "Project": "blog"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "blog-igw",
              "Project": "blog"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv4_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0feaa8bb2fc2c5948",
            "id": "r-rtb-0d6e8e0b34d4dc86c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d6e8e0b34d4dc86c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.blog_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv6_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0feaa8bb2fc2c5948",
            "id": "r-rtb-0d6e8e0b34d4dc86c2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d6e8e0b34d4dc86c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.blog_igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:route-table/rtb-0d6e8e0b34d4dc86c",
            "id": "rtb-0d6e8e0b34d4dc86c",
            "owner_id": "516969219217",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0feaa8bb2fc2c5948",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0feaa8bb2fc2c5948",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "blog-vpc-public-rt",
              "Project": "blog"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "blog-vpc-public-rt",
              "Project": "blog"
            },
            "timeouts": null,
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Public-subnet-A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c494e7ae8562a7d3",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d6e8e0b34d4dc86c",
            "subnet_id": "subnet-05cd81fa2f549ce23"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.named",
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Public-subnet-B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0476da67de13efee9",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d6e8e0b34d4dc86c",
            "subnet_id": "subnet-01a83167340d4462c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.named",
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "Public-subnet-C",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cc845d3f5b3a009",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0d6e8e0b34d4dc86c",
            "subnet_id": "subnet-0b2f32a5ec8730089"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.named",
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "named",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "App-subnet-A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-0b2508bb6c361ca43",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2508bb6c361ca43",
            "ipv6_cidr_block": "2406:da18:ac0:c603::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a75e5ee62bb746cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "App-subnet-A",
              "Project": "blog",
              "Role": "app"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "App-subnet-A",
              "Project": "blog",
              "Role": "app"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "App-subnet-B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-0309ef42f195495e2",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0309ef42f195495e2",
            "ipv6_cidr_block": "2406:da18:ac0:c604::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-02cd703c637743443",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "App-subnet-B",
              "Project": "blog",
              "Role": "app"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "App-subnet-B",
              "Project": "blog",
              "Role": "app"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "App-subnet-C",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-021e3fb3bb43cf9d1",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021e3fb3bb43cf9d1",
            "ipv6_cidr_block": "2406:da18:ac0:c605::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09c8a2e697a93b4fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "App-subnet-C",
              "Project": "blog",
              "Role": "app"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "App-subnet-C",
              "Project": "blog",
              "Role": "app"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "DB-subnet-A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-03416325a95baae3d",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03416325a95baae3d",
            "ipv6_cidr_block": "2406:da18:ac0:c606::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09d56163834ebfdb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "DB-subnet-A",
              "Project": "blog",
              "Role": "db"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "DB-subnet-A",
              "Project": "blog",
              "Role": "db"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "DB-subnet-B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-0c1baef04464e2ea9",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1baef04464e2ea9",
            "ipv6_cidr_block": "2406:da18:ac0:c607::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b44463fa1c63907a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "DB-subnet-B",
              "Project": "blog",
              "Role": "db"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "DB-subnet-B",
              "Project": "blog",
              "Role": "db"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "DB-subnet-C",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-0a51c281bb35fa124",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a51c281bb35fa124",
            "ipv6_cidr_block": "2406:da18:ac0:c608::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-095366e29721f6e7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "DB-subnet-C",
              "Project": "blog",
              "Role": "db"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "DB-subnet-C",
              "Project": "blog",
              "Role": "db"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "Public-subnet-A",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-05cd81fa2f549ce23",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cd81fa2f549ce23",
            "ipv6_cidr_block": "2406:da18:ac0:c600::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-03e0455bce7d531fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "Public-subnet-A",
              "Project": "blog",
              "Role": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "Public-subnet-A",
              "Project": "blog",
              "Role": "public"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "Public-subnet-B",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-01a83167340d4462c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a83167340d4462c",
            "ipv6_cidr_block": "2406:da18:ac0:c601::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0ab5868212999d0e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "Public-subnet-B",
              "Project": "blog",
              "Role": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "Public-subnet-B",
              "Project": "blog",
              "Role": "public"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "Public-subnet-C",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:subnet/subnet-0b2f32a5ec8730089",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2f32a5ec8730089",
            "ipv6_cidr_block": "2406:da18:ac0:c602::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09c122fe98d729512",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516969219217",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "Public-subnet-C",
              "Project": "blog",
              "Role": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "Public-subnet-C",
              "Project": "blog",
              "Role": "public"
            },
            "vpc_id": "vpc-0606a85b56b1ea1e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.blog_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "blog_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:516969219217:vpc/vpc-0606a85b56b1ea1e1",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02ec3560da4a5caaf",
            "default_route_table_id": "rtb-04d94047a04c43206",
            "default_security_group_id": "sg-0ef966b5f5ca543be",
            "dhcp_options_id": "dopt-076f1ba267464da91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0606a85b56b1ea1e1",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0ccb63d56238d8fce",
            "ipv6_cidr_block": "2406:da18:ac0:c600::/56",
            "ipv6_cidr_block_network_border_group": "ap-southeast-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d94047a04c43206",
            "owner_id": "516969219217",
            "region": "ap-southeast-1",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "blog-vpc",
              "Project": "blog"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "blog-vpc",
              "Project": "blog"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}